samples/_failures_safe/1761260808_692adf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b35833db.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_b35833db.c:180:24: error: ‘INT’ undeclared (first use in this function)
  180 |         if (dist[i] == INT
      |                        ^~~
./samples/SAFE/__tmp_b35833db.c:180:24: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_b35833db.c:180:27: error: expected ‘)’ at end of input
  180 |         if (dist[i] == INT
      |            ~              ^
      |                           )
./samples/SAFE/__tmp_b35833db.c:180:9: error: expected declaration or statement at end of input
  180 |         if (dist[i] == INT
      |         ^~
./samples/SAFE/__tmp_b35833db.c:180:9: error: expected declaration or statement at end of input
